<resources>
    <string name="app_name">MARMS</string>
    <string name="title">多机器人资源管理系统\nMARMS</string>
    <string name="test">测试</string>

    <string name="task">任务</string>
    <string name="detect">探索</string>
    <string name="transport">运输</string>
    <string name="environment">环境</string>
    <string name="target">目标</string>
    <string name="terrain">地形</string>

    <string name="weather">天气</string>
    <string name="temperature">温度</string>
    <string name="humidity">湿度</string>
    <string name="time">时间</string>

    <string name="task_location">目标位置</string>
    <string name="task_run_time">任务执行时间</string>
    <string name="task_team">执行任务编队</string>
    <string name="task_time">任务开始时间</string>

    <string name="robot_name">名称</string>
    <string name="robot_id">编号</string>
    <string name="robot_distance">移动距离</string>
    <string name="robot_electric">电量</string>
    <string name="robot_target">目标</string>
    <string name="robot_time">时间</string>

    <string name="t_id">编号</string>
    <string name="t_name">名称</string>
    <string name="t_location">坐标</string>
    <string name="t_complete">是否完成</string>
    <string name="t_time">完成时间</string>

    <string name="link_sign_up">还没有账号？立即注册</string>
    <string name="link_login">已经注册过？登录</string>
    <string name="login">登录</string>
    <string name="sign_up">创建账户</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="p_name">姓名</string>
    <string name="mobile">手机号码</string>
    <string name="re_enter_password">再次确认密码</string>

    <string name="add">添加</string>
    <string name="change">修改</string>
    <string name="name">名称</string>
    <string name="location">位置</string>

    <string name="yes">是</string>
    <string name="no">否</string>
</resources>
