<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey100">
    
    <TextView
        android:id="@+id/task_child_title_tv"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:paddingLeft="36dp"
        android:textSize="22sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        android:src="@drawable/spilt_line"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="16dp">

        <TableRow>
            <TextView
                android:layout_height="36dp"
                android:layout_width="128dp"
                android:gravity="center_vertical"
                android:text="@string/task_location"/>
            <TextView
                android:layout_width="256dp"
                android:id="@+id/task_location_tv"
                android:gravity="center_vertical"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="36dp"
                android:layout_width="128dp"
                android:gravity="center_vertical"
                android:text="@string/task_time"/>
            <TextView
                android:layout_width="256dp"
                android:id="@+id/task_time_tv"
                android:gravity="center_vertical"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="128dp"
                android:gravity="center_vertical"
                android:text="@string/task_team"/>
            <TextView
                android:layout_width="256dp"
                android:id="@+id/task_team_tv"
                android:gravity="center_vertical"/>
        </TableRow>

    </TableLayout>
</LinearLayout>